# road-detection-project

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  Requirement.md  analyze_training_results.py  convert.py  detect.py  filter_hard_examples.py  main.py  model_optimization.py  pyproject.toml  split_val.py  split_validation.py  train.py  train_RDD2022.py  train_convnext.py  train_test.py
road_detection/: __init__.py
road_detection/core/: __init__.py  config.py  device.py  model.py
road_detection/models/: __init__.py  backbones.py  yolo11_convnext.py  yolo11_convnext_trainer.py
road_detection/training/: __init__.py  config_factory.py  trainer.py
road_detection/utils/: __init__.py  dataset.py  logger.py  plotting.py  validation.py
